@@ -50,36 +50,18 @@
         </item>
         <item>
             <key> <string>_body</string> </key>
-            <value> <string>kw = dict(limit=15)\n
-\n
-if starts_with is not None and search_catalog_key is not None:\n
-  kw[search_catalog_key] = "%s%%" % starts_with\n
-\n
-if search_portal_type is not None:\n
-  kw["portal_type"] = search_portal_type\n
-\n
-result_dict_list = []\n
-for brain in context.portal_catalog(**kw):\n
-  obj = brain.getObject()\n
-\n
-  # There may be objects with different Portal Types, so the only way seems\n
-  # to call the script for each object...\n
-  result_dict = obj.getTypeBasedMethod(\'getCompletionDict\',\n
-                                       fallback_script_id=\'Base_getCompletionDict\')(obj)\n
-\n
-  result_dict_list.append(result_dict)\n
-\n
-from json import dumps\n
-return dumps(result_dict_list, indent=4)\n
+            <value> <string>return {\'label\': obj.getTitle(),\n
+        \'value\': obj.getTitle(),\n
+        \'description\': obj.getRelativeUrl()}\n
 </string> </value>
         </item>
         <item>
             <key> <string>_params</string> </key>
-            <value> <string>starts_with=None, search_catalog_key=None, search_portal_type=None</string> </value>
+            <value> <string>obj</string> </value>
         </item>
         <item>
             <key> <string>id</string> </key>
-            <value> <string>ERP5Site_getCompletionList</string> </value>
+            <value> <string>Base_getCompletionDict</string> </value>
         </item>
       </dictionary>
     </pickle>
